# clim2

./: .gitignore  LICENSE  Makefile  Makefile.amd64  Makefile.defs  Makefile.generic  README.org  build.lisp  build.tmp  buildclim.cl  cat-alt.lisp  cat.lisp  cat.tmp  cffi-type-lab.lisp  clim-example.lisp  clim2-pre-compile-0.asd  clim2-pre-compile-1.asd  clim2.asd  cp-files.sh  initialization-lab.org  instclimxm.lisp  lisp-files.txt  load-clim.lisp  load-dump-script.sh  low-level-interface.org  make-clean.sh  make.sh  misc-clim-entrypoints.sh  output.txt  package.lisp  process-build.lisp  rewrite-util.lisp  runlisp.sh  struct-types.txt  training-scripts-mk.sh
aclpc/: acl-class.lisp  acl-frames.lisp  acl-medium.lisp  acl-port.lisp  acl-prel.lisp  acl-widget.lisp  pkgdcl.lisp  winwidgh.lisp
c-src/: CMakeLists.txt  Makefile  stub-motif.c
c-src/misc/: MyDrawingA.c  dev-load-1.lisp  train.lisp  xtsupport.c
c-src/xlib/: xlibsupport.c
clim/: accept-values.lisp  clim-defs.lisp  command.lisp  completer.lisp  cursor.lisp  db-text.lisp  gestures.lisp  incremental-redisplay.lisp  input-editor-commands.lisp  pixmap-streams.lisp  ptypes1-lab.lisp  ptypes1.lisp  ptypes2.lisp  recording-protocol.lisp  standard-types.lisp  stream-defprotocols.lisp  translators.lisp  view-defs.lisp
cloe/: sysdcl.lisp
demo/: README  browser.lisp  cload-demos.lisp  custom-records.lisp  demo-driver.lisp  demo-last.lisp  output-record.lisp  packages.lisp  plot.lisp  sysdcl-pc.lisp  sysdcl.lisp  thinkadot.lisp
genera/: sysdcl.lisp
homegrown/: db-text.lisp
hpgl/: hpgl-medium.lisp  sysdcl.lisp
(+122 files in other folders)
